@@ -320,6 +320,7 @@ Views 3.x-7.x-dev
     o #859368 by dereine: Click sort using wrong add_orderby() line caused some click sorts to fail.
     o #843866 by dagmar: Allow summary views to specify their path rather than assuming the view path all the time.
     o #526106 by Blackice2999: Fix occasional off-by-one-day problem with date arguments.
+    o #785960 by dereine: Reset button should appear after Apply button, not before.
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
